--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ prettyconf==2.2.1
 pyaes==1.6.1; python_version >= "3.6" and python_version < "4.0"
 pyromod==1.5
 precursion==1.0.0
+recursion-2019==1.0.0
 pymongo==4.3.3
 pyRiZoeLX 
 pyroaddon==1.0.6
